# spice_netlist_parser

./: .coverage  .pre-commit-config.yaml  LICENSE  README.md  check_quality.sh  netlist_parser.sh  pyproject.toml  regression.sh  requirements.txt  tatus --porcelain
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  release.yml  security.yml  tests.yml
examples/: 100.json  100.sp  100k.json  100k.sp  10k.json  10k.sp  1k.json  1k.sp  1m.json
examples/complex/: XOR2.cdl  XOR2.sp
examples/flipflops/: DFFX1.cdl  DFFX1.sp
examples/gates/: AND2.cdl  AND2.sp  INV.cdl  INV.sp  NAND2.cdl  NAND2.sp  NOR2.cdl  NOR2.sp  OR2.cdl  OR2.sp
src/spice_netlist_parser/: __init__.py  ast_nodes.py  ast_parser.py  cli.py  comparison.py  config.py  exceptions.py  grammar.py  logging_config.py  main.py  models.py  multi_file_parser.py  parser.py  roundtrip.py  serializer.py  visitors.py
src/spice_netlist_parser/cli/: __init__.py  __main__.py  commands.py
tests/: __init__.py  test_additional_coverage.py  test_ast_parser_additional.py  test_ast_parser_errors.py  test_ast_parser_preprocess.py  test_cli_commands.py  test_cli_commands_errors.py  test_cli_commands_more.py  test_cli_formatting.py  test_cli_main_errors.py  test_cli_main_import.py  test_compare.py  test_comparison.py  test_config.py  test_config_exceptions.py  test_main_cli.py  test_models.py  test_parser_errors.py  test_parser_main_error_paths.py  test_roundtrip.py  test_roundtrip_diff_options.py  test_roundtrip_failures.py  test_roundtrip_validator.py  test_serializer.py  test_serializer_roundtrip_extra.py  test_serializer_values.py  test_visitors.py  test_visitors_more.py
